# py-promptor

./: .flake8  .gitignore  README.md  app.py  manifest.json  pyproject.toml  requirements.txt
.slack/: config.json
.uv/: config.toml
config/: __init__.py  categories.py  settings.py
lib/: __init__.py
lib/agent/: __init__.py  agent.py  ai_agent.py  improve_prompt_agent.py  improve_prompt_schema.py  metadata_agent.py  metadata_schema.py  schema.py
lib/db/: __init__.py  database.py  models.py
lib/slack/: __init__.py  blocks.py  error_eph.py  error_modal.py  get_action_id.py  get_prompt_id.py  get_user_id.py  get_view_id.py  handle_error.py  send_error_eph.py  show_error_modal.py
lib/ui/: __init__.py  add_prompt_modal.py  category_select.py  confirmation_modal.py  delete_prompt_confirmation_modal.py  edit_prompt_modal.py  error_modal_view.py  loading_modal.py  prompt_detail_modal.py  prompt_library.py  prompt_metadata.py  prompt_result_modal.py
lib/utils/: __init__.py  mrkdown.py
listeners/: __init__.py
listeners/actions/: __init__.py  add_prompt_button.py  delete_prompt.py  edit_prompt.py  filter_category.py  improve_prompt.py  sample_action.py  suggest_metadata.py  toggle_favorite.py  use_prompt.py  view_prompt_details.py  view_prompts_modal.py
listeners/assistant/: __init__.py  sample_assistant.py  start_assistant_thread.py  user_message.py
listeners/commands/: __init__.py  sample_command.py
listeners/events/: __init__.py  app_home_opened.py
listeners/messages/: __init__.py  sample_message.py
listeners/shortcuts/: __init__.py  add_prompt.py  sample_shortcut.py  save_message_as_prompt.py  (+1 more)
(+29 files in other folders)
